--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -877,6 +877,8 @@ Defeated = Poražený(á)
 Tiles = Políčka
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -961,6 +963,8 @@ Clear terrain features = Smazat vlastnosti terénu
 Clear improvements = Smazat vylepšení
 Clear resource = Smazat zdroje
 Requires = Požadavky
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
