--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1419,6 +1419,8 @@ Defeated =
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1579,6 +1581,8 @@ Clear improvements =
 Clear resource = 
  # Requires translation!
 Requires = 
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
