--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1574,6 +1574,8 @@ Defeated =
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1734,6 +1736,8 @@ Clear improvements =
 Clear resource = 
  # Requires translation!
 Requires = 
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
