--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -691,7 +691,6 @@ We have discovered [naturalWonder]! = Nous avons découverts [naturalWonder] !
 We have received [goldAmount] Gold for discovering [naturalWonder] = Nous avons reçu [goldAmount] Or pour la découverte de [naturalWonder]
 Your relationship with [cityStateName] is about to degrade = Notre relation avec [cityStateName] va se dégrader
 Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
- # Requires translation!
 A new barbarian encampment has spawned! = Un nouveau campement barbare est apparu !
 
 # World Screen UI
@@ -866,6 +865,8 @@ Action = Action
 Defeated = Vaincu
 Tiles = Cases
 Natural Wonders = Merveilles de la Nature
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -923,7 +924,6 @@ May contain [listOfResources] = Peut contenir [listOfResources]
 Upgrades to [upgradedUnit] = Améliorer en [upgradedUnit]
 Obsolete with [obsoleteTech] = Obsolète avec [obsoleteTech]
 Occurs on [listOfTerrains] = Doit possèder [listOfTerrains]
- # Requires translation!
 Placed on [terrainType] = Placé en [terrainType]
 Can be found on  = Peut être trouver sur 
 Improved by [improvement] = Amélioré par [improvement]
@@ -950,6 +950,8 @@ Clear terrain features = Effacer les caractéristiques des terrains
 Clear improvements = Effacer les améliorations
 Clear resource = Effacer les ressources
 Requires = Requiert
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
@@ -1310,9 +1312,7 @@ Fountain of Youth = Fontaine de Jouvence
 
 # Natural Wonders Uniques
 
- # Requires translation!
 Grants 500 Gold to the first civilization to discover it = Donne 500 Or a la première civilisation qui le découvre
- # Requires translation!
 Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Occtroie le Rajeunissement (tous les effets de soins sont doublés) a toutes les unités militaires adjacentes pour le reste de la partie
 
 # Resources
@@ -1448,9 +1448,7 @@ Pikeman = Piquier
 Landsknecht = Lansquenet
 Knight = Chevalier
 Camel Archer = Archer méhariste
- # Requires translation!
 Conquistador = Conquistador
- # Requires translation!
 Defense bonus when embarked = Bonus de défense quand embarqué
 Naresuan's Elephant = Elephant de Naresuan
 Samurai = Samuraï
@@ -1458,13 +1456,11 @@ Combat very likely to create Great Generals = A de grande chance de faire appara
 Caravel = Caravelle
 Turtle Ship = Bateau Tortue
 +1 Visibility Range = +1 à la Portée de Vision
- # Requires translation!
 +2 Visibility Range = +2 à la Portée de Vision
 Cannon = Canon
 Musketman = Arquebusier
 Musketeer = Mousquetaire
 Janissary = Janissaire
- # Requires translation!
 Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Soigne [amountHealed] dégâts si il tue une unité
 Minuteman = Minuteman
