--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -880,6 +880,8 @@ Defeated = Besiegt
 Tiles = Felder
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -964,6 +966,8 @@ Clear terrain features = Lösche Geländemerkmale
 Clear improvements = Lösche Verbesserungen
 Clear resource = Lösche Ressource
 Requires = Benötigt
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
