--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -1271,6 +1271,8 @@ Defeated =
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1431,6 +1433,8 @@ Clear improvements =
 Clear resource = 
  # Requires translation!
 Requires = 
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
