--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -865,6 +865,8 @@ Action = Azione
 Defeated = Sconfitto
 Tiles = Caselle
 Natural Wonders = Meraviglie Naturali
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -948,6 +950,8 @@ Clear terrain features = Elimina caratteristica del terreno
 Clear improvements = Elimina miglioramenti
 Clear resource = Elimina risorsa
 Requires = Richiede
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
