--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -901,6 +901,8 @@ Defeated = 패배
 Tiles = 타일
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -985,6 +987,8 @@ Clear terrain features = 지형 요소 지우기
 Clear improvements = 시설 지우기
 Clear resource = 자원 지우기
 Requires = 선행 조건
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
