--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -865,6 +865,8 @@ Action = Akcja
 Defeated = Pokonany
 Tiles = Pola
 Natural Wonders = Cuda Naturalne
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -948,6 +950,8 @@ Clear terrain features = Wyczyść cechy terenu
 Clear improvements = Wyczyść ulepszenia
 Clear resource = Wyczyść zasoby
 Requires = Wymagane
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
