--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -935,6 +935,8 @@ Defeated = Derrotado
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1060,6 +1062,8 @@ Clear improvements =
  # Requires translation!
 Clear resource = 
 Requires = Requer
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
