--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1251,6 +1251,8 @@ Defeated = Învins
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1409,6 +1411,8 @@ Clear improvements =
  # Requires translation!
 Clear resource = 
 Requires = necesită
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
