--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -137,7 +137,6 @@ Connects trade routes over water = Создаёт водные торговые 
 
 University = Университет
 +2 Science from each worked Jungle tile = Джунгли обеспечивают +2 науки
- # Requires translation!
 Wat = Ват 
 
 Oxford University = Оксфордский университет
@@ -866,6 +865,8 @@ Action = Действие
 Defeated = Побеждён
 Tiles = Клетки
 Natural Wonders = Чудеса природы
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -923,7 +924,6 @@ May contain [listOfResources] = Может содержать [listOfResources]
 Upgrades to [upgradedUnit] = Улучшается до [upgradedUnit]
 Obsolete with [obsoleteTech] = Устаревает после [obsoleteTech]
 Occurs on [listOfTerrains] = Появляется на [listOfTerrains]
- # Requires translation!
 Placed on [terrainType] = Расположен на [terrainType]
 Can be found on  = Может быть найден в 
 Improved by [improvement] = Улучшен [improvement]
@@ -950,6 +950,8 @@ Clear terrain features = Убрать особенности ландшафта
 Clear improvements = Удалить улучшения
 Clear resource = Удалить ресурсы
 Requires = Требует
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
@@ -1310,9 +1312,7 @@ Fountain of Youth = Фонтан вечной молодости
 
 # Natural Wonders Uniques
 
- # Requires translation!
 Grants 500 Gold to the first civilization to discover it = Даёт 500 золота первой цивилизации которая открыла его.
- # Requires translation!
 Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Даёт Омоложение (все лечащие эффекты удвоены) всем соседним юнитам до конца игры 
 
 # Resources
@@ -1448,9 +1448,7 @@ Pikeman = Пикинер
 Landsknecht = Ландскнехт
 Knight = Рыцарь
 Camel Archer = Лучник на верблюде
- # Requires translation!
 Conquistador = Конкистадор
- # Requires translation!
 Defense bonus when embarked = Бонус к защите когда погружен на корабль
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
@@ -1458,13 +1456,11 @@ Combat very likely to create Great Generals = Большой шанс получ
 Caravel = Каравелла
 Turtle Ship = Кобуксон
 +1 Visibility Range = +1 Диапазон видимости
- # Requires translation!
 +2 Visibility Range = +2 Диапазона видимости
 Cannon = Пушка
 Musketman = Стрельцы
 Musketeer = Мушкетёр
 Janissary = Янычары
- # Requires translation!
 Tercio = Терция
 Heals [amountHealed] damage if it kills a unit = Восстаналивает [amountHealed] здоровья при уничтожении юнита
 Minuteman = Минитмэн
