--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -865,6 +865,8 @@ Action =  Acción
 Defeated = Derrotado
 Tiles = Casillas
 Natural Wonders = Maravillas naturales
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -949,6 +951,8 @@ Clear terrain features = Limpiar características de terreno
 Clear improvements = Limpiar mejoras
 Clear resource = Limpiar recurso
 Requires = Requiere
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
