--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1463,6 +1463,8 @@ Defeated =
 Tiles = 
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -1623,6 +1625,8 @@ Clear improvements =
 Clear resource = 
  # Requires translation!
 Requires = 
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
