--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -878,6 +878,8 @@ Defeated = 戰敗
 Tiles = 地區
  # Requires translation!
 Natural Wonders = 
+ # Requires translation!
+Treasury deficit = 
 
 #Victory
 
@@ -962,6 +964,8 @@ Clear terrain features = 清除地貌
 Clear improvements = 清除設施
 Clear resource = 清除資源
 Requires = 需要
+ # Requires translation!
+Menu = 
 
 # Civilopedia Tutorials names
 
