--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -865,8 +865,7 @@ Action = Akcja
 Defeated = Pokonany
 Tiles = Pola
 Natural Wonders = Cuda Naturalne
- # Requires translation!
-Treasury deficit = 
+Treasury deficit = Deficyt budżetowy
 
 #Victory
 
@@ -950,8 +949,7 @@ Clear terrain features = Wyczyść cechy terenu
 Clear improvements = Wyczyść ulepszenia
 Clear resource = Wyczyść zasoby
 Requires = Wymagane
- # Requires translation!
-Menu = 
+Menu = Menu
 
 # Civilopedia Tutorials names
 
