TileMapHolder refactor & Map Editor update
* TileMapHolder renamed to MapHolder
* EditorMapHolder and WorldMapHolder inherits from ZoomableScrollPane
* MapEditor Brush Size (from 1 to 5)
* MapEditor painting mode (dragging the pointer on screen paints continuously)

--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -945,6 +945,7 @@ Clear improvements = Elimina miglioramenti
 Clear resource = Elimina risorsa
 Requires = Richiede
 Menu = Menu
+Brush Size = Dimensione pennello
 
 # Civilopedia Tutorials names
 
