--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1451,7 +1451,7 @@ Knight = Лицар
 Camel Archer = Лучник на верблюді
 Conquistador = Конкістадор
  # Requires translation!
-Defense bonus when embarked = Бонус к захисту при зануренні на борт
+Defense bonus when embarked = Бонус к захисту при підйомі на борт
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
 Combat very likely to create Great Generals = Висока вірогідність отримати у битві видатного генерала
