--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -317,7 +317,7 @@ We will remember this. = Ми пам’ятатимемо це.
  # Requires translation!
 [civName] has declared war on [targetCivName]! = [civName] оголосила війну [targetCivName]!
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = [civName] і [targetCivName] підписали Мирний Договір!
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] і [targetCivName] підписали Мирний договір!
  # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] і [targetCivName] підписали Декларацію Дружби! 
  # Requires translation!
