--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -319,7 +319,7 @@ We will remember this. = Ми пам’ятатимемо це.
  # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName] і [targetCivName] підписали Мирний договір!
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] і [targetCivName] підписали Декларацію Дружби! 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] і [targetCivName] підписали Декларацію про дружбу! 
  # Requires translation!
 [civName] has denounced [targetCivName]! = [civName] звинуватила [targetCivName]!
 
