--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -836,7 +836,7 @@ Hurry Wonder = Завершити будування дива
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Ваші громадяни були задоволені вашим правлінням так довго, що імперія вступає в Золотий вік!
 You have entered the [newEra]! = Ви увійшли до епохи [newEra]!
  # Requires translation!
-[civName] has entered the [eraName]! = [civName] увійшла у [eraName]!
+[civName] has entered the [eraName]! = [civName] ввійшла у [eraName]!
 [policyBranch] policy branch unlocked! = Галузь політики [policyBranch] розблокована
 Overview = Огляд
 Total = Усього
