--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1007,7 +1007,7 @@ Citizenship = Права і обов'язки громадянина
 Tile improvement speed +25%, receive a free worker near the capital = Покращення клітинок відбувається на +25% швидше, новий працівник коло столиці
 Republic = Республіка
  # Requires translation!
-+1 construction in every city, +5% construction when constructing buildings = + 1 виробництва, +5% виробництва при виробництві будівель
++1 construction in every city, +5% construction when constructing buildings = +1 виробництво, +5% виробництва при будівництві будівель
 Representation = Представництво
 Each city founded increases culture cost of policies 33% less than normal. Starts a golden age. = Кожне засноване місто зменшує ціну інституту на 33%. Розпочинає золотий вік.
 Meritocracy = Меритократія
