--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -2,25 +2,25 @@
 # Tutorial tasks
 
  # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Gerakkan sebuah unit!\nKlik unit tersebut > Klik ke sebuah destinasi > Klik panah yang muncul
  # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Dirikan sebuah kota!\nPilih Penetap (unit dengan bendera) > Klik tombol 'temukan kota' (pojok kiri bawah) 
+# Requires translation!
+Enter the city screen!\nClick the city button twice = Masuk ke tampilan kota!\nKlik tombol kota dua kali
  # Requires translation!
-Enter the city screen!\nClick the city button twice = 
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Pilih sebuah teknologi untuk penelitian!\nKlik tombol teknologi (warna hijau, pojok kiri atas) > \n pilih teknologi > klik 'Meneliti' (pojok kanan bawah)
  # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Membangun sebuah bangunan!\nMasuk ke tampilan kota > Klik ke sebuah unit atau bangunan (sebelah kiri)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Melewati satu giliran!\nMelewati unit dengan tombol 'Unit selanjutnya' > Klik 'Giliran selanjutnya'
  # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Memperkerjakan ulang ubin!\nMasuk ke tampilan kota > tekan ubin yang telah dikerjakan (warna hijau) untuk berhenti memperkerjakan> \n klik sebuah ubin yang tidak dikerjakan
  # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = Bertemu peradaban lain!\nMenjelajahi peta sampai bertemu dengan peradaban yang lain!
  # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Membuka opsi!\nTekan tombol Menu (pojok kiri atas) > tekan 'Opsi'
  # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished =
  # Requires translation!
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
  # Requires translation!
@@ -301,7 +301,7 @@ Sydney Opera House = Gedung Opera Sydney
 
 Pentagon = Pentagon
  # Requires translation!
-'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 
+'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 'Dalam mempersiapkan perang Aku selalu menemukan bahwa rencana itu tak berguna, tetapi perencanaan itu sangat diperlukan.'  - Dwight D. Eisenhower
 Gold cost of upgrading military units reduced by 33% = Jumlah emas untuk memperbarui unit militer dikurangi sebanyak 33%
 
 Manhattan Project = Projek Manhattan
@@ -363,13 +363,13 @@ Denounce ([numberOfTurns] turns) = Hina ([numberOfTurns] turns)
 We will remember this. = Kami akan ingat ini.
 
  # Requires translation!
-[civName] has declared war on [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] sudah mendeklarasikan perang kepada [targetCivName]!
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] dan [targetCivName] sudah menandatangani Perjanjian Perdamaian!
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] and [targetCivName] sudah menandatangani Deklarasi Pertemanan!
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! = [civName] sudah menghina [targetCivName]!
 
 Unforgivable = Tak Termaafkan
 Enemy = Musuh
@@ -423,13 +423,13 @@ Gift [giftAmount] gold (+[influenceAmount] influence) =
 Relationship changes in another [turnsToRelationshipChange] turns = 
 
  # Requires translation!
-Cultured = 
+Cultured = Berbudaya
  # Requires translation!
-Maritime = 
+Maritime = Maritim
  # Requires translation!
-Mercantile = 
+Mercantile = Pedagang
  # Requires translation!
-Militaristic = 
+Militaristic = Militer
 Type:  = Jenis:
 Influence:  = Pengaruh:
 Reach 30 for friendship. = Capai 30 untuk persahabatan
@@ -585,46 +585,46 @@ Promotions =
  # Requires translation!
 Barbarians = 
  # Requires translation!
-Load copied data = 
+Load copied data = Muat data tersalin
  # Requires translation!
-Could not load game from clipboard! = 
+Could not load game from clipboard! = Tidak bisa muat game dari Clipboard!
  # Requires translation!
-Start game! = 
+Start game! = Mulai permainan!
  # Requires translation!
-Map options = 
+Map options = Opsi peta
  # Requires translation!
-Game options = 
+Game options = Opsi permainan
  # Requires translation!
-Map type = 
+Map type = Tipe peta
  # Requires translation!
-Generated = 
+Generated = Tergenerasi
  # Requires translation!
-Existing = 
+Existing = Tersedia
  # Requires translation!
-Map generation type = 
+Map generation type = Tipe generasi peta
  # Requires translation!
 Number of city-states = 
  # Requires translation!
-One City Challenge = 
+One City Challenge = Tantangan hanya satu kota
  # Requires translation!
-No barbarians = 
+No barbarians = Tak ada orang barbar
  # Requires translation!
-No ancient ruins = 
+No ancient ruins = Tak ada reruntuhan kuno
  # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Tak ada keajaiban alam
  # Requires translation!
-Victory conditions = 
+Victory conditions = Kondisi kemenangan
  # Requires translation!
-Scientific = 
+Scientific = Ilmu pengetahuan
  # Requires translation!
-Domination = 
+Domination = Dominasi
  # Requires translation!
-Cultural = 
+Cultural = Budaya
 
  # Requires translation!
 HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = 
  # Requires translation!
-Online Multiplayer = 
+Online Multiplayer =
 
 World size = Ukuran Dunia
 Tiny = Sangat Kecil
@@ -635,7 +635,7 @@ Huge = Sangat Besar
 
 Difficulty = Kesulitan
  # Requires translation!
-Settler = 
+Settler = Penetap
  # Requires translation!
 Chieftain = 
  # Requires translation!
@@ -656,39 +656,39 @@ AI =
 Remove = Hapus
 Random = Acak
  # Requires translation!
-Human = 
+Human = Manusia
  # Requires translation!
 Hotseat = 
  # Requires translation!
-User ID = 
+User ID = ID Pengguna
  # Requires translation!
-Click to copy = 
+Click to copy = Tekan untuk salin
 
 
  # Requires translation!
-Game Speed = 
+Game Speed = Kecepatan bermain
  # Requires translation!
-Quick = 
+Quick = Cepat
  # Requires translation!
-Standard = 
+Standard = Standar
  # Requires translation!
-Epic = 
+Epic = Mantap
  # Requires translation!
-Marathon = 
+Marathon = Maraton
 
  # Requires translation!
-Starting Era = 
+Starting Era = Era Permulaan
  # Requires translation!
 It looks like we can't make a map with the parameters you requested! = 
  # Requires translation!
 Maybe you put too many players into too small a map? = 
  # Requires translation!
-No human players selected! = 
+No human players selected! = Tidak ada pemain manusia yang terpilih!
 
 # Multiplayer
 
  # Requires translation!
-Username = 
+Username = Nama Pengguna
  # Requires translation!
 Multiplayer = 
  # Requires translation!
@@ -750,86 +750,86 @@ Map uploaded successfully! =
 # Options
 
  # Requires translation!
-Options = 
+Options = Opsi
  # Requires translation!
-Display options = 
+Display options = Opsi tampilan
  # Requires translation!
-Gameplay options = 
+Gameplay options = Opsi permainan
  # Requires translation!
-Other options = 
+Other options = Opsi lainnya
  # Requires translation!
-Turns between autosaves = 
+Turns between autosaves = Banyak Giliran tiap auto simpan
  # Requires translation!
-Sound effects volume = 
+Sound effects volume = Besar suara efek
  # Requires translation!
-Music volume = 
+Music volume = Besar suara musik
  # Requires translation!
-Download music = 
+Download music = Unduh lagu
  # Requires translation!
-Downloading... = 
+Downloading... = Mengunduh
  # Requires translation!
-Could not download music! = 
+Could not download music! = Tidak bisa mengunduh musik!
  # Requires translation!
-Show = 
+Show = Tampilkan
  # Requires translation!
-Hide = 
+Hide = Sembunyikan
  # Requires translation!
-Show worked tiles = 
+Show worked tiles = Tampilkan ubin yang dikerjakan
  # Requires translation!
-Show resources and improvements = 
+Show resources and improvements = Tampilkan sumber daya dan peningkatan
  # Requires translation!
-Check for idle units = 
+Check for idle units = Cek untuk unit yang diam
  # Requires translation!
-Move units with a single tap = 
+Move units with a single tap = Pindah unit dengan sekali tekan
  # Requires translation!
-Show tutorials = 
+Show tutorials = Tunjukkan tutorial
  # Requires translation!
-Auto-assign city production = 
+Auto-assign city production = pekerjakan populasi kota otomatis
  # Requires translation!
-Auto-build roads = 
+Auto-build roads = jalan terbangun otomatis
  # Requires translation!
-Show minimap = 
+Show minimap = tampilkan peta kecil
  # Requires translation!
-Show pixel units = 
+Show pixel units = tampilkan pixel unit
  # Requires translation!
-Show pixel improvements = 
+Show pixel improvements = tampilkan pixel improvisasi
  # Requires translation!
-Enable nuclear weapons = 
+Enable nuclear weapons = mengaktifkan senjata nuklir
  # Requires translation!
 Fontset = 
 
 # Notifications
 
  # Requires translation!
-Research of [technologyName] has completed! = 
+Research of [technologyName] has completed! = Penelitian untuk [technologyName] sudah selesai
  # Requires translation!
-You have entered a golden age! = 
+You have entered a golden age! = Kamu telah memasuki masa emas
  # Requires translation!
-[resourceName] revealed near [cityName] = 
+[resourceName] revealed near [cityName] = [resourceName] terlihat di dekat [cityName]
  # Requires translation!
-A [greatPerson] has been born in [cityName]! = 
+A [greatPerson] has been born in [cityName]! = Seorang [greatPerson] sudah terlahir di [cityName]!
  # Requires translation!
-We have encountered [civName]! = 
+We have encountered [civName]! = Kita telah menemui [civName]!
  # Requires translation!
 Cannot provide unit upkeep for [unitName] - unit has been disbanded! = 
  # Requires translation!
-[cityName] has grown! = 
+[cityName] has grown! = [cityName] telah tumbuh!
  # Requires translation!
-[cityName] has been founded! = 
+[cityName] has been founded! = [cityName] sudah didirikan!
  # Requires translation!
-[cityName] is starving! = 
+[cityName] is starving! = [cityName] sedang kelaparan!
  # Requires translation!
 [construction] has been built in [cityName] = 
  # Requires translation!
-[wonder] has been built in a faraway land = 
+[wonder] has been built in a faraway land = [wonder] sudah terbangun di tempat lain
  # Requires translation!
-Work has started on [construction] = 
+Work has started on [construction] = Pekerjaan sudah dimulai dalam [construction]
  # Requires translation!
 [cityName] cannot continue work on [construction] = 
  # Requires translation!
 [cityname] has expanded its borders! = 
  # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = Masa Emas sudah berakhir
  # Requires translation!
 [cityName] has been razed to the ground! = 
  # Requires translation!
@@ -903,11 +903,11 @@ You and [name] are no longer allies! =
  # Requires translation!
 [civName] gave us a [unitName] as gift near [cityName]! = 
  # Requires translation!
-[civName] has denounced us! = 
+[civName] has denounced us! = [civName] sudah mencela kita!
  # Requires translation!
-[cityName] has been connected to your capital! = 
+[cityName] has been connected to your capital! = [cityName] sudah terhubung ke Ibukota!
  # Requires translation!
-[cityName] has been disconnected from your capital! = 
+[cityName] has been disconnected from your capital! = [cityName] sudah tidak terhubung ke Ibukota!
  # Requires translation!
 [civName] has accepted your trade request = 
  # Requires translation!
@@ -948,65 +948,65 @@ Waiting for other players... =
  # Requires translation!
 in = 
  # Requires translation!
-Next turn = 
+Next turn = Giliran selanjutnya
  # Requires translation!
-Turn = 
+Turn = Giliran
  # Requires translation!
-turns = 
+turns = Banyak giliran
  # Requires translation!
-turn = 
+turn = Giliran
  # Requires translation!
-Next unit = 
+Next unit = Unit selanjutnya
  # Requires translation!
-Pick a policy = 
+Pick a policy = Pilih sebuah kebijakan
  # Requires translation!
-Movement = 
+Movement = Pergerakkan
  # Requires translation!
-Strength = 
+Strength = Kekuatan
  # Requires translation!
-Ranged strength = 
+Ranged strength = Kekuatan terjarak
  # Requires translation!
 Bombard strength = 
  # Requires translation!
-Range = 
+Range = Jarak
  # Requires translation!
-Move unit = 
+Move unit = Gerakkan unit
  # Requires translation!
-Stop movement = 
+Stop movement = Hentikan pergerakkan
  # Requires translation!
-Construct improvement = 
+Construct improvement = Bangun improvisasi
  # Requires translation!
-Automate = 
+Automate = Otomatisasi
  # Requires translation!
-Stop automation = 
+Stop automation = Hentikan otomatisasi
  # Requires translation!
-Construct road = 
+Construct road = Bangun jalan
  # Requires translation!
-Fortify = 
+Fortify = Bangun pertahanan
  # Requires translation!
-Fortification = 
+Fortification = Pertahanan
  # Requires translation!
-Sleep = 
+Sleep = Istirahat
  # Requires translation!
-Moving = 
+Moving = Bergerak
  # Requires translation!
-Set up = 
+Set up = Mempersiapkan
  # Requires translation!
 Upgrade to [unitType] ([goldCost] gold) = 
  # Requires translation!
-Found city = 
+Found city = Dirikan kota
  # Requires translation!
-Promote = 
+Promote = Promosi
  # Requires translation!
-Health = 
+Health = Darah
  # Requires translation!
-Disband unit = 
+Disband unit = Bubarkan unit
  # Requires translation!
-Explore = 
+Explore = Menjelajahi
  # Requires translation!
-Stop exploration = 
+Stop exploration = Hentikan penjelajahan
  # Requires translation!
-Pillage = 
+Pillage = Jarah
  # Requires translation!
 Do you really want to disband this unit? = 
  # Requires translation!
@@ -1016,60 +1016,60 @@ Create [improvement] =
  # Requires translation!
 Start Golden Age = 
  # Requires translation!
-Yes = 
+Yes = Ya
  # Requires translation!
-No = 
+No = Tidak
  # Requires translation!
 Acquire = 
  # Requires translation!
-Gold = 
+Gold = Emas
  # Requires translation!
-Science = 
+Science = Ilmu Pengetahuan
  # Requires translation!
-Happiness = 
+Happiness = Kebahagiaan
  # Requires translation!
-Production = 
+Production = Produksi
  # Requires translation!
-Culture = 
+Culture = Budaya
  # Requires translation!
-Food = 
+Food = Makanan
  # Requires translation!
-GOLDEN AGE = 
+GOLDEN AGE = MASA EMAS
  # Requires translation!
-Golden Age = 
+Golden Age = Masa Emas
  # Requires translation!
-[year] BC = 
+[year] BC = [year] Sebelum Masehi
  # Requires translation!
-[year] AD = 
+[year] AD = [year] Sesudah Masehi 
  # Requires translation!
-Civilopedia = 
+Civilopedia = Civilopedia
  # Requires translation!
-Start new game = 
+Start new game = Mulai permainan baru
  # Requires translation!
-Save game = 
+Save game = Simpan permainan
  # Requires translation!
-Load game = 
+Load game = Muat permainan
  # Requires translation!
-Victory status = 
+Victory status = Status kemenangan
  # Requires translation!
-Social policies = 
+Social policies = Kebijakan sosial
  # Requires translation!
-Community = 
+Community = Komunitas
  # Requires translation!
-Close = 
+Close = Tutup
 
 # City screen
 
  # Requires translation!
-Exit city = 
+Exit city = Keluar kota
  # Requires translation!
-Raze city = 
+Raze city = Runtuhkan kota
  # Requires translation!
-Stop razing city = 
+Stop razing city = Hentikan peruntuhan
  # Requires translation!
 Buy for [amount] gold = 
  # Requires translation!
-Buy = 
+Buy = Beli
  # Requires translation!
 Would you like to purchase [constructionName] for [buildingGoldCost] gold? = 
  # Requires translation!
@@ -1142,11 +1142,11 @@ The city will not produce anything. =
 # Technology UI
 
  # Requires translation!
-Pick a tech = 
+Pick a tech = Pilih sebuah teknologi
  # Requires translation!
-Pick a free tech = 
+Pick a free tech = Pilih sebuah teknologi gratis
  # Requires translation!
-Research [technology] = 
+Research [technology] = Teliti [technology] 
  # Requires translation!
 Pick [technology] as free tech = 
  # Requires translation!
@@ -1154,7 +1154,7 @@ Units enabled =
  # Requires translation!
 Buildings enabled = 
  # Requires translation!
-Wonder = 
+Wonder = Keajaiban dunia
  # Requires translation!
 National Wonder = 
  # Requires translation!
