--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -314,14 +314,10 @@ Indeed! = Perfetto!
 Denounce ([numberOfTurns] turns) = Denuncia ([numberOfTurns] turni)
 We will remember this. = Non credere che ce lo scorderemo!
 
- # Requires translation!
-[civName] has declared war on [targetCivName]! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] ha dichiarato guerra a [targetCivName]!
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] ha siglato una pace con [targetCivName]!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] e [targetCivName] hanno stretto una Dichiarazione d'Amicizia!
+[civName] has denounced [targetCivName]! = [civName] ha denunciato [targetCivName]!
 
 Unforgivable = Imperdonabile!
 Enemy = Nemici
@@ -835,8 +831,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Accellera Meraviglia
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = I tuoi cittadini sono da tempo contenti del tuo governo! Il tuo impero è entrato in un'Età dell'Oro!
 You have entered the [newEra]! = Benvenuto nell'Era [newEra]!
- # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = [civName] è entrato nell'Era [eraName]!
 [policyBranch] policy branch unlocked! = Ramo sociale [policyBranch] sbloccato!
 Overview = Panoramica
 Total = Totale
@@ -865,8 +860,7 @@ Action = Azione
 Defeated = Sconfitto
 Tiles = Caselle
 Natural Wonders = Meraviglie Naturali
- # Requires translation!
-Treasury deficit = 
+Treasury deficit = Deficit tesoreria
 
 #Victory
 
@@ -950,8 +944,7 @@ Clear terrain features = Elimina caratteristica del terreno
 Clear improvements = Elimina miglioramenti
 Clear resource = Elimina risorsa
 Requires = Richiede
- # Requires translation!
-Menu = 
+Menu = Menu
 
 # Civilopedia Tutorials names
 
